# pawlib

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  USAGE.md  add_ids_to_dataset.py  docker-compose.yml  inference_demo.ipynb  install_podman.sh  podman-compose.yml  pyproject.toml  train_and_eval.py  upload_to_huggingface.py
examples/: docker_batch_predict.py  docker_predict.py  download_sample_sac.py  high_level_api.py  quick_start.py
src/pawlib/: __init__.py  checkpointing.py  config.py  losses.py  metrics.py  paw.py  preprocessing.py  preprocessing_utils.py  sac_utils.py  utils.py
src/pawlib/architectures/: __init__.py  paw_copy.py
src/pawlib/streaming/: __init__.py
src/pawlib/streaming/core/: __init__.py  buffer.py  pipeline.py  stream.py
src/pawlib/streaming/detectors/: __init__.py  classical.py
